--- a/index.css
+++ b/index.css
@@ -57,6 +57,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  /* box-shadow: inset 0 0 200px rgb(21, 216, 151); */
 }
 
 .timer {
